Redefined narrow/normal boundary to prevent overlapping menu text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,7 +212,7 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 980px) {
+		@media screen and (max-width: 1168px) {
 
 			.container {
 				width: 95%;
@@ -981,7 +981,7 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 980px) {
+		@media screen and (max-width: 1168px) {
 
 			.row {
 				display: flex;
@@ -1831,7 +1831,7 @@ input, select, textarea {
 
 	}
 
-	@media screen and (max-width: 980px) {
+	@media screen and (max-width: 1168px) {
 
 		#spectralmain > header {
 			padding: 10em 3em 8em 3em ;
@@ -2883,7 +2883,7 @@ ul.package-desc {
 		display: none;
 	}
 
-	@media screen and (max-width: 980px) {
+	@media screen and (max-width: 1168px) {
 
 		/* Basic */
 
